--- a/02_IconApp/MainWindow.xaml
+++ b/02_IconApp/MainWindow.xaml
@@ -5,12 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_02_IconApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="ICON" Height="450" Width="800" WindowStartupLocation="CenterScreen" FontFamily="Century Gothic">
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="366" VerticalAlignment="Top" Width="737" Margin="28,22,0,0"/>
         <Label x:Name="lblNumber" FontWeight="Bold" Content="" HorizontalContentAlignment="Center" Margin="348,145,324,235"/>
         <TextBox x:Name="txtNumber1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="True" HorizontalAlignment="Left" Height="36" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" Margin="348,203,0,0" RenderTransformOrigin="2.146,4.696"/>
-        <Label x:Name="lblResult" Background="Black" Content="" HorizontalContentAlignment="Center" Foreground="Blue" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="6.976,13.5" Margin="28,346,0,0" Width="737" Height="42"/>
+        <Label x:Name="lblResult" Background="Black" Content="" HorizontalContentAlignment="Center" Foreground="White" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="6.976,13.5" Margin="28,346,0,0" Width="737" Height="42"/>
         <Button x:Name="btnAdd" Click="BtnAdd_Click" Content="Add" Foreground="Blue" BorderBrush="Blue" VerticalContentAlignment="Center" Background="White" FontWeight="Bold" BorderThickness="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="348,266,0,0" Height="37"/>
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="2. Write a program that automatically adds 5 numbers only after accepting the 5th number as input from a user and displays the sum output." TextAlignment="Center" VerticalAlignment="Top" Margin="86,86,0,0" Width="637"/>
     </Grid>
 </Window>
